--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "@react-admin/ra-form-layout": "^5.6.0",
+    "@react-admin/ra-navigation": "^5.0.2",
+    "ra-data-simple-rest": "^5.5.2",
+    "ra-input-rich-text": "^5.5.2",
     "react": "^19.0.0",
     "react-admin": "^5.5.2",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.4",
-    "react-router-dom": "^7.1.4",
-    "ra-data-simple-rest": "^5.5.2"
+    "react-router-dom": "^7.1.4"
   },
   "devDependencies": {
     "@types/node": "^22.12.0",
