--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^6.4.2",
     "@react-admin/ra-form-layout": "^5.6.0",
     "@react-admin/ra-navigation": "^5.0.2",
+    "@supabase/supabase-js": "^2.48.1",
     "ra-data-simple-rest": "^5.5.2",
     "ra-input-rich-text": "^5.5.2",
+    "ra-supabase": "^3.3.1",
     "react": "^19.0.0",
     "react-admin": "^5.5.2",
     "react-dom": "^19.0.0",
@@ -35,9 +37,8 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "fakerest": "^4.1.1",
-    "msw": "^2.7.0",
     "prettier": "^3.4.2",
+    "supabase": "^2.9.6",
     "typescript": "^5.7.3",
     "vite": "^6.0.11"
   },
