--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.4.2",
     "@react-admin/ra-form-layout": "^5.6.0",
     "@react-admin/ra-navigation": "^5.0.2",
+    "@react-admin/ra-realtime": "^5.0.0",
     "@supabase/supabase-js": "^2.48.1",
     "ra-data-simple-rest": "^5.5.2",
     "ra-input-rich-text": "^5.5.2",
@@ -38,7 +39,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "prettier": "^3.4.2",
-    "supabase": "^2.9.6",
+    "supabase": "^2.10.0",
     "typescript": "^5.7.3",
     "vite": "^6.0.11"
   },
