--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hello-pangea/dnd": "^18.0.0-beta.0",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
     "@react-admin/ra-form-layout": "^5.6.0",
     "@react-admin/ra-navigation": "^5.0.2",
     "@react-admin/ra-realtime": "^5.0.0",
     "@supabase/supabase-js": "^2.48.1",
+    "@tanstack/react-query-devtools": "^5.66.0",
     "ra-data-simple-rest": "^5.5.2",
     "ra-input-rich-text": "^5.5.2",
     "ra-supabase": "^3.3.1",
