--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@react-admin/ra-navigation": "^5.0.2",
     "@react-admin/ra-realtime": "^5.0.0",
     "@supabase/supabase-js": "^2.48.1",
+    "@tanstack/query-sync-storage-persister": "^5.66.0",
+    "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
+    "@tanstack/react-query-persist-client": "^5.66.0",
     "ra-data-simple-rest": "^5.5.2",
     "ra-input-rich-text": "^5.5.2",
     "ra-supabase": "^3.3.1",
