--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-admin/ra-navigation": "^5.0.2",
     "@react-admin/ra-realtime": "^5.0.0",
     "@supabase/supabase-js": "^2.48.1",
+    "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
+    "lodash": "^4.17.21",
     "ra-data-simple-rest": "^5.5.2",
     "ra-input-rich-text": "^5.5.2",
     "ra-supabase": "^3.3.1",
@@ -30,6 +32,7 @@
     "react-router-dom": "^7.1.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.15",
     "@types/node": "^22.12.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
