--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-admin": "^5.5.2",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.4",
-    "react-router-dom": "^7.1.4"
+    "react-router-dom": "^7.1.4",
+    "react-virtuoso": "^4.12.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.15",
