--- a/package.json
+++ b/package.json
@@ -12,41 +12,41 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@hello-pangea/dnd": "^18.0.0-beta.0",
-    "@mui/icons-material": "^6.4.2",
-    "@mui/material": "^6.4.2",
+    "@hello-pangea/dnd": "^18.0.1",
+    "@mui/icons-material": "^6.4.5",
+    "@mui/material": "^6.4.5",
     "@react-admin/ra-form-layout": "^5.6.0",
     "@react-admin/ra-navigation": "^5.0.2",
     "@react-admin/ra-realtime": "^5.0.0",
-    "@supabase/supabase-js": "^2.48.1",
-    "@tanstack/react-query": "^5.66.0",
-    "@tanstack/react-query-devtools": "^5.66.0",
+    "@supabase/supabase-js": "^2.49.1",
+    "@tanstack/react-query": "^5.66.9",
+    "@tanstack/react-query-devtools": "^5.66.9",
     "lodash": "^4.17.21",
-    "ra-data-simple-rest": "^5.5.2",
-    "ra-input-rich-text": "^5.5.2",
-    "ra-supabase": "^3.3.1",
+    "ra-data-simple-rest": "^5.6.1",
+    "ra-input-rich-text": "^5.6.1",
+    "ra-supabase": "^3.4.0",
     "react": "^19.0.0",
-    "react-admin": "^5.5.2",
+    "react-admin": "^5.6.1",
     "react-dom": "^19.0.0",
-    "react-router": "^7.1.4",
-    "react-router-dom": "^7.1.4"
+    "react-router": "^7.2.0",
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.15",
-    "@types/node": "^22.12.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@typescript-eslint/parser": "^8.22.0",
+    "@types/node": "^22.13.5",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.19.0",
+    "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "prettier": "^3.4.2",
-    "supabase": "^2.10.0",
+    "prettier": "^3.5.2",
+    "supabase": "^2.15.8",
     "typescript": "^5.7.3",
-    "vite": "^6.0.11"
+    "vite": "^6.2.0"
   },
   "name": "atomic-pm",
   "msw": {
