--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
     "@react-admin/ra-form-layout": "^5.6.0",
+    "@react-admin/ra-history": "^5.0.0",
     "@react-admin/ra-navigation": "^5.0.2",
     "@react-admin/ra-realtime": "^5.0.0",
     "@supabase/supabase-js": "^2.49.1",
