--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev-fakerest": "cross-env VITE_PROVIDER=fakerest vite",
+    "dev-supabase": "cross-env VITE_PROVIDER=supabase vite",
+    "dev": "bun run dev-fakerest",
     "build": "vite build",
     "serve": "vite preview",
     "type-check": "tsc --noEmit",
@@ -12,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@faker-js/faker": "^9.5.0",
     "@hello-pangea/dnd": "^18.0.1",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
@@ -22,7 +25,9 @@
     "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.66.9",
     "@tanstack/react-query-devtools": "^5.66.9",
+    "cross-env": "^7.0.3",
     "lodash": "^4.17.21",
+    "ra-data-fakerest": "^5.6.1",
     "ra-data-simple-rest": "^5.6.1",
     "ra-input-rich-text": "^5.6.1",
     "ra-supabase": "^3.4.0",
