--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-query-devtools": "^5.66.11",
     "cross-env": "^7.0.3",
     "lodash": "^4.17.21",
+    "mime-types": "^2.1.35",
     "ra-data-fakerest": "^5.6.2",
     "ra-data-simple-rest": "^5.6.2",
     "ra-input-rich-text": "^5.6.2",
@@ -34,11 +35,13 @@
     "react": "^19.0.0",
     "react-admin": "^5.6.2",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.16",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^22.13.8",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
