--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "cross-env": "^7.0.3",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
-    "ra-data-fakerest": "^5.6.2",
     "ra-data-simple-rest": "^5.6.2",
     "ra-input-rich-text": "^5.6.2",
     "ra-supabase": "^3.4.0",
@@ -52,6 +51,8 @@
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "fakerest": "^4.1.2",
+    "msw": "^2.7.3",
     "prettier": "^3.5.2",
     "supabase": "^2.15.8",
     "typescript": "^5.8.2",
