--- a/package.json
+++ b/package.json
@@ -29,8 +29,13 @@
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "ra-data-simple-rest": "^5.6.2",
+    "ra-i18n-polyglot": "^5.6.2",
     "ra-input-rich-text": "^5.6.2",
+    "ra-language-english": "^5.6.2",
+    "ra-language-french": "^5.6.2",
     "ra-supabase": "^3.4.0",
+    "ra-supabase-language-english": "^3.4.0",
+    "ra-supabase-language-french": "^3.4.0",
     "react": "^19.0.0",
     "react-admin": "^5.6.2",
     "react-dom": "^19.0.0",
