--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^6.4.6",
     "@react-admin/ra-form-layout": "^5.9.0",
     "@react-admin/ra-history": "^5.0.0",
+    "@react-admin/ra-markdown": "^5.0.1",
     "@react-admin/ra-navigation": "^5.1.0",
     "@react-admin/ra-realtime": "^5.0.0",
     "@supabase/supabase-js": "^2.49.1",
