--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-router": "^7.3.0",
-    "react-router-dom": "^7.3.0"
+    "react-router-dom": "^7.3.0",
+    "tiptap-markdown": "^0.8.10"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.16",
