--- a/package.json
+++ b/package.json
@@ -14,56 +14,56 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@faker-js/faker": "^9.6.0",
+    "@faker-js/faker": "^9.7.0",
     "@hello-pangea/dnd": "^18.0.1",
-    "@mui/icons-material": "^6.4.10",
-    "@mui/material": "^6.4.10",
-    "@react-admin/ra-form-layout": "^5.10.1",
-    "@react-admin/ra-history": "^5.0.0",
+    "@mui/icons-material": "^6.4.11",
+    "@mui/material": "^6.4.11",
+    "@react-admin/ra-form-layout": "^5.11.0",
+    "@react-admin/ra-history": "5.0.1",
     "@react-admin/ra-markdown": "^5.0.2",
-    "@react-admin/ra-navigation": "^5.2.0",
-    "@react-admin/ra-realtime": "^5.0.0",
+    "@react-admin/ra-navigation": "^6.0.0",
+    "@react-admin/ra-realtime": "^5.0.1",
     "@supabase/supabase-js": "^2.49.4",
-    "@tanstack/react-query": "^5.71.1",
-    "@tanstack/react-query-devtools": "^5.71.2",
+    "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-query-devtools": "^5.74.4",
     "cross-env": "^7.0.3",
     "lodash": "^4.17.21",
     "mime-types": "^3.0.1",
-    "ra-data-simple-rest": "^5.7.0",
-    "ra-i18n-polyglot": "^5.7.0",
-    "ra-input-rich-text": "^5.7.0",
-    "ra-language-english": "^5.7.0",
-    "ra-language-french": "^5.7.0",
-    "ra-supabase": "^3.4.0",
-    "ra-supabase-language-english": "^3.4.0",
-    "ra-supabase-language-french": "^3.4.0",
+    "ra-data-simple-rest": "^5.7.3",
+    "ra-i18n-polyglot": "^5.7.3",
+    "ra-input-rich-text": "^5.7.3",
+    "ra-language-english": "^5.7.3",
+    "ra-language-french": "^5.7.3",
+    "ra-supabase": "^3.4.1",
+    "ra-supabase-language-english": "^3.4.1",
+    "ra-supabase-language-french": "^3.4.1",
     "react": "^19.1.0",
-    "react-admin": "^5.7.0",
+    "react-admin": "^5.7.3",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
-    "react-router": "^7.4.1",
-    "react-router-dom": "^7.4.1",
+    "react-router": "^7.5.1",
+    "react-router-dom": "^7.5.1",
     "tiptap-markdown": "^0.8.10"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.16",
     "@types/mime-types": "^2.1.4",
-    "@types/node": "^22.13.17",
-    "@types/react": "^19.0.13",
-    "@types/react-dom": "^19.0.5",
-    "@typescript-eslint/eslint-plugin": "^8.29.0",
-    "@typescript-eslint/parser": "^8.29.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.23.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-react": "^7.37.4",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
+    "@vitejs/plugin-react": "^4.4.1",
+    "eslint": "^9.25.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "fakerest": "^4.1.2",
-    "msw": "^2.7.3",
+    "msw": "^2.7.5",
     "prettier": "^3.5.3",
-    "supabase": "^2.20.5",
-    "typescript": "^5.8.2",
-    "vite": "^6.2.4"
+    "supabase": "^2.20.12",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.2"
   },
   "name": "atomic-pm",
   "msw": {
